--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,13 +27,27 @@ a:hover {
     vertical-align: middle;
   }
 }
+.ttl_h2-blog {
+  position: relative;
+  color: #fff;
+  background: $color_brooklyn;
+  text-align: left;
+  @include font-size(1.2);
+  line-height: 1.5;
+  font-weight: normal;
+  padding: 20px;
+  img {
+    padding: 30px 0 20px;
+  }
+}
 .ttl_h3 {
   position: relative;
   @include font-size(1.8);
   font-weight: bold;
   border-bottom: 2px solid $color_base;
-  padding: 0 0 15px 0;
+  padding: 0 0 10px 0;
   margin-bottom: 20px;
+  line-height: 1.5;
   .more {
     position: absolute;
     right: 0;
@@ -54,12 +68,28 @@ a:hover {
     margin-left: 10px;
   }
 }
+.ttl_h3-blog {
+  margin-bottom: 30px;
+  time {
+    // position: absolute;
+    // right: 0;
+    // bottom:-27px;
+    // padding: 5px 10px;
+    // color: #fff;
+    // background:$color_base ;
+    // margin-bottom: 0;
+  }
+}
 time {
   font-style: italic;
   color: lighten( $color_base, 50% );
 }
 article {
   margin-bottom: 60px;
+  * {
+    line-height: 1.5;
+    margin-bottom: 2em;
+  }
    h4 {
     position: relative;
     border-bottom: 1px solid $color_base;
@@ -70,13 +100,21 @@ article {
     @include font-size(1.6);
     &:before {
       position: absolute;
-      top: 4px;
+      top: 8px;
       left: 0;
       width: 5px;
       height: 5px;
       background: $color_base;
       content: "";
     }
+  }
+  img {
+    box-sizing:border-box;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    background-image: linear-gradient(45deg, #ffffff ,#ffffff 48%, #333333 48%, #333333 52%, #ffffff 52%, #ffffff 100%);
+    background-size: 10px 10px;
   }
 }
 
@@ -214,37 +252,45 @@ article {
   }
 }
 .list {
+  line-height: 1.5;
   li {
     border-bottom:1px dotted lighten( $color_base, 60% );
-    padding: 15px 0;
+    padding: 15px;
     &:first-child {
       border-top:1px dotted lighten( $color_base, 60% );
     }
+    &:nth-of-type(odd) {
+      background:#f9f9f9;
+    }
   }
   dt {
-    margin-bottom: 5px;
     font-style: italic;
     &:first-child {
       border-top:1px dotted lighten( $color_base, 60% );
-      padding-top: 10px;
     }
   }
   dd {
     padding-bottom: 10px;
-    margin-bottom: 10px;
     padding-left: 10px;
     border-bottom:1px dotted lighten( $color_base, 60% );
   }
 }
 .list_table {
   dt {
-    &:first-child {
-      padding-top: 15px;
+    padding-top: 15px;
+    padding-left: 15px;
+    margin: 0;
+    &:nth-of-type(odd) {
+      background: #f9f9f9;
     }
   }
   dd {
     padding-bottom: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
+    padding-left: 30px;
+    &:nth-of-type(odd) {
+      background: #f9f9f9;
+    }
   }
 }
 /* パンクズ */
@@ -265,6 +311,9 @@ article {
 /* clm_main */
 .clm_main {
 
+}
+.clm_blog-left {
+  display: none;
 }
 .section_block {
   margin-bottom: 60px;
@@ -355,10 +404,18 @@ a:hover .icon_new {
     color:lighten( $color_base, 50% ) ;
   }
 }
-.textarea {
-  line-height: 1.5;
-  p {
-    margin-bottom: 2em;
+.post_meta {
+  @include clearfix;
+  border-top: 1px dotted #cccccc;
+  border-bottom: 1px dotted #cccccc;
+  li {
+    float: left;
+    margin: 0 20px 0 0;
+    padding: 10px 0;
+    @include font-size(1.2);
+  }
+  .tag {
+    border:none;
   }
 }
 article {
@@ -375,18 +432,53 @@ article {
     }
   }
 }
-
+.contact_tel {
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
+  margin-top:30px; 
+  .tel_link {
+    margin-right: 20px;
+  }
+}
+.box_caption {
+  border:1px solid lighten( $color_base, 50% ) ;
+  padding: 20px;
+}
+.btn_send {
+  background: $color_brooklyn;
+  padding: 20px 0;
+  width: 300px;
+  border:none;
+  color: #fff;
+  @include font-size(1.8); 
+  letter-spacing: 0.5em; 
+  margin: 0 auto;
+  display: block;
+  &:hover {
+    background: lighten( $color_base, 50% );
+    transition: 0.2s ease;
+  }
+}
 
 /* clm_side */
 .clm_side {
   .ttl_h3 {
     border-width: 1px;
   }
+  .list {
+    li {
+      background: none;
+      padding: 15px 0;  
+    }
+  }
 }
 .list_archives {
   a {
     text-decoration: none;
     display: block;
+    text-indent: -12px;
+    padding-left: 12px;
     &:hover {
       color:lighten( $color_base, 50% ) ;
     }
@@ -394,6 +486,11 @@ article {
   .icon-triangle-right {
     @include font-size(1.0);
     margin-right: 2px;
+  }
+}
+.list_shop-info {
+  dt {
+    padding-top: 10px;
   }
 }
 .list_bnr {
@@ -501,6 +598,11 @@ footer {
 
 @media screen and (min-width: 768px) {
   /* 767px以上用（タブレット／スマートフォン用）の記述 */
+  .container {
+    padding: 60px;
+    max-width: 750px;
+    margin: 0 auto;
+  }
   .header_top {
     padding: 0 20px;
     h1 {
@@ -530,6 +632,33 @@ footer {
       width: 200px;
       float: left;
       margin-right: 20px;
+    }
+  }
+  .list_table {
+    dt {
+      clear: left;
+      float: left;
+      width: 150px;
+      border:none;
+      padding: 15px;
+      box-sizing:border-box;
+      margin: 0;
+      background: none;
+      &:first-child {
+        border:none;
+        background: none;
+        padding-top: 15px;
+      }
+    }
+    dd {
+      padding: 15px 15px 15px 150px;
+      margin: 0;
+      &:nth-child(2) {
+        border-top:1px dotted lighten( $color_base, 60% );
+      }
+      &:nth-of-type(odd) {
+        background:#f9f9f9;
+      }
     }
   }
 }
@@ -613,18 +742,36 @@ footer {
   .breadcrumb {
     width: 960px;
     padding: 0;
-    margin: 0 auto 10px auto;
+    margin: 0 auto 5px auto;
   }
   .container {
     @include clearfix;
     width: 960px;
+    max-width: 960px;
     margin: 0 auto;
+    padding: 20px;
   }
   /* clm_main */
   .clm_main {
     width: 700px;
     float: left;
   }
+  .clm_blog {
+    @include clearfix;
+    border-top: 3px solid $color_brooklyn;
+  }
+  .clm_blog-left {
+    display: block;
+    float: left;
+    width: 200px;
+  }
+  .clm_blog-right {
+    float: right;
+    width: 470px;
+    margin-top: 30px;
+  }
+
+  /* clm_side */
   .clm_side {
     width: 200px;
     float: right;
