--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -65,22 +65,6 @@ a:hover {
   color: #fff;
 }
 
-/* top */
-.h1_top {
-  font-size: 20px;
-  font-size: 2rem;
-  font-family: "proxima-nova-n7","proxima-nova",sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-h2, h3 {
-  border-bottom: 1px solid #dddddd;
-  line-height: 1;
-}
-
 .container {
   padding: 4px 4px 0 4px;
 }
@@ -90,7 +74,7 @@ h2, h3 {
   font-size: 30px;
   font-size: 3rem;
   *zoom: 1;
-  margin-bottom: 30px;
+  height: 700px;
 }
 .visual:before, .visual:after {
   content: " ";
@@ -99,7 +83,17 @@ h2, h3 {
 .visual:after {
   clear: both;
 }
+.visual .box {
+  display: block;
+  width: 50%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-sizing: border-box;
+}
 .visual a {
+  display: block;
   text-decoration: none;
   font-family: "proxima-nova-n7","proxima-nova",sans-serif;
   font-style: normal;
@@ -108,6 +102,7 @@ h2, h3 {
   width: 100%;
   height: 100%;
   text-align: center;
+  line-height: 700px;
 }
 .visual a:hover {
   transition: 0.2s ease-in;
@@ -130,45 +125,38 @@ h2, h3 {
   background-color: rgba(13, 69, 95, 0.8);
 }
 
-.box {
-  position: relative;
-  width: 50%;
-  height: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-sizing: border-box;
-}
-
-.ratio-1_1:before {
+/* .ratio-1_1:before {
   content: "";
   display: block;
   padding-top: 100%;
-  /* 1:1 */
 }
-
 .inner {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 100%;
 }
-
 .table {
   display: table;
   width: 100%;
   height: 100%;
   text-align: center;
 }
-
 .table > * {
   display: table-cell;
   vertical-align: middle;
+} */
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
 }
 
 .list_shop {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .list_shop li {
   display: inline-block;
@@ -181,11 +169,25 @@ h2, h3 {
   border-right: 1px solid #b3b3b3;
 }
 
+.h1_top {
+  font-size: 20px;
+  font-size: 2rem;
+  font-family: "proxima-nova-n7","proxima-nova",sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h2, h3 {
+  border-bottom: 1px solid #dddddd;
+  line-height: 1;
+}
+
 .copyright {
   font-size: 9px;
   font-size: 0.9rem;
   text-align: center;
-  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 979px) {
@@ -193,9 +195,6 @@ h2, h3 {
 }
 @media screen and (max-width: 767px) {
   /* 767px以下用（タブレット／スマートフォン用）の記述 */
-  .ratio-1_1:before {
-    padding-top: 200%;
-  }
 }
 @media screen and (max-width: 479px) {
   /* 479px以下用（スマートフォン用）の記述 */
