--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -5,17 +5,6 @@
 @import "compass";
 @import "set";
 
-/* top */
-.h1_top {
-  @include font-size(2.0);
-  @include gothic_bold;
-  text-align: center; 
-  margin-bottom: 20px;
-}
-h2 , h3 {
-  border-bottom:1px solid #dddddd;
-  line-height: 1;
-}
 .container {
   padding: 4px 4px 0 4px;
 }
@@ -24,14 +13,28 @@ h2 , h3 {
 .visual {
   @include font-size(3.0);
   @include clearfix;
-  margin-bottom: 30px;
+  height: 700px;
+  .box {
+    display: block;
+    width: 50%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-sizing:border-box;
+    &:hover{
+
+    }
+  }
   a {
+    display: block;
     text-decoration: none;
     @include gothic_bold;
     color: #fff;
     width: 100%;
     height: 100%;
     text-align: center;
+    line-height: 700px;
     &:hover {
       transition: 0.2s ease-in;
     }
@@ -56,18 +59,11 @@ h2 , h3 {
     }
   }
 }
-.box {
-  position: relative;
-  width: 50%;
-  height: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-sizing:border-box;
-}
-.ratio-1_1:before {
+
+/* .ratio-1_1:before {
   content: "";
   display: block;
-  padding-top: 100%; /* 1:1 */
+  padding-top: 100%;
 }
 .inner {
   position: absolute;
@@ -84,10 +80,18 @@ h2 , h3 {
 .table > * {
   display: table-cell;
   vertical-align: middle;
+} */
+
+footer {
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  text-align: center;
+  padding:30px 0 ;
 }
 .list_shop {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   li {
     display: inline-block;
     a {
@@ -99,19 +103,28 @@ h2 , h3 {
     }
   }
 }
+.h1_top {
+  @include font-size(2.0);
+  @include gothic_bold;
+  text-align: center; 
+  margin-bottom: 20px;
+}
+h2 , h3 {
+  border-bottom:1px solid #dddddd;
+  line-height: 1;
+}
 .copyright {
   @include font-size(0.9);
   text-align: center;
-  margin-bottom: 10px;
 }
 @media screen and (max-width: 979px) {
   /* 979px以下用（タブレット用）の記述 */
 }
 @media screen and (max-width: 767px) {
   /* 767px以下用（タブレット／スマートフォン用）の記述 */
-  .ratio-1_1:before {
-    padding-top: 200%;
-  }
+  // .ratio-1_1:before {
+  //   padding-top: 200%;
+  // }
 }
 @media screen and (max-width: 479px) {
   /* 479px以下用（スマートフォン用）の記述 */
