未コミット分コミット

--- a/assets/scss/style-brooklyn.scss
+++ b/assets/scss/style-brooklyn.scss
@@ -30,7 +30,7 @@ a {
   background: $color_brooklyn;
   color: #fff;
 }
-input {
+input , textarea {
   &::selection {
     background: #fff;
     color: $color_base;;
@@ -618,6 +618,9 @@ article {
     &:hover {
       color:lighten( $color_base, 50% ) ;
     }
+    time {
+      @include font-size(1.2);
+    }
   }
   .icon-triangle-right {
     @include font-size(1.0);
@@ -649,8 +652,9 @@ article {
 #s {
   float: left;
   border: 0;
-  padding: 3px;
+  padding: 0 3px;
   width: 80%;
+  line-height: 1.5;
 }
 #search_submit {
   float: right;
